@@ -17,7 +17,7 @@
   <parent>
     <groupId>org.eclipse.rcptt.tests</groupId>
     <artifactId>base</artifactId>
-    <version>2.5.5-SNAPSHOT</version>
+    <version>2.6.0-SNAPSHOT</version>
     <relativePath>./pom-base.xml</relativePath>
   </parent>
   <dependencies>
@@ -71,6 +71,8 @@
 			<vmArg>-Dorg.jboss.byteman.transform.all</vmArg>
 			<vmArg>-Dorg.jboss.byteman.debug</vmArg-->
 			<vmArg>-XX:+HeapDumpOnOutOfMemoryError</vmArg>
+			<vmArg>-Xmx1G</vmArg>
+			<vmArg>-Xlog:gc</vmArg>
 			<!-- "Not supported in OpenJDK" <vmArg>-XX:+UnlockCommercialFeatures</vmArg>
 			<vmArg>-XX:+FlightRecorder</vmArg>
 			<vmArg>-XX:StartFlightRecording=name=aut,delay=60s,filename=aut.jfr,dumponexit=true</vmArg>-->
@@ -78,6 +80,9 @@
           </aut>
           <runner>
             <version>${runner-version}</version>
+						<vmArgs>
+							<vmArg>-XX:+HeapDumpOnOutOfMemoryError</vmArg>
+						</vmArgs>
           </runner>
           <skipTags>
             <tag>skipExecution</tag>
@@ -89,6 +94,7 @@
           <testOptions>
             <execTimeout>28800</execTimeout>
           </testOptions>
+          <testFailureIgnore>true</testFailureIgnore>
         </configuration>
       </plugin>
     </plugins>
